// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Component Snapshots > should match MetricCard snapshot 1`] = `
<div
  aria-label="Metric: Test Metric"
  class="rounded-2xl border bg-gradient-card dark:bg-gradient-card-dark border-white/20 dark:border-white/10 hover:transform hover:-translate-y-1 hover:scale-[1.02] relative overflow-hidden p-6 focus:outline-none focus:ring-2 focus:ring-primary/20 transition-all duration-300 hover:shadow-lg hover:shadow-blue-500/25"
  initial="rest"
  role="article"
  tabindex="0"
  variants="[object Object]"
  whilehover="hover"
  whiletap="tap"
>
  <div
    class="absolute inset-0 rounded-2xl bg-gradient-to-r from-sky-500/20 via-cyan-400/10 to-fuchsia-500/20 p-[1px]"
  >
    <div
      class="h-full w-full rounded-2xl bg-card/90 backdrop-blur-sm"
    />
  </div>
  <div
    class="relative z-10"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <div
        class="flex items-center gap-3"
      >
        <h3
          class="text-sm font-medium text-muted-foreground"
        >
          Test Metric
        </h3>
      </div>
      <div
        aria-label="Trend chart for Test Metric"
        class="w-16 h-6"
      >
        <svg
          aria-label="Sparkline showing trend data for Test Metric"
          class="text-primary/60"
          height="20"
          role="img"
          viewBox="0 0 60 20"
          width="60"
        >
          <path
            d="M 0 M 20 15 L 10 30 L 15 45 L 5 60 L 0"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="flex items-end justify-between"
    >
      <div
        class="flex-1"
      >
        <div
          animate="[object Object]"
          aria-label="Current value: 1.2K"
          class="text-3xl font-bold text-foreground mb-1"
          initial="[object Object]"
          transition="[object Object]"
        >
          1.2K
        </div>
        <div
          animate="[object Object]"
          aria-label="Change: increase by 15.5 percent"
          class="
                  inline-flex items-center gap-1 px-2 py-1 rounded-full text-xs font-medium
                  text-emerald-500 bg-emerald-500/10
                "
          initial="[object Object]"
          role="status"
          transition="[object Object]"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trending-up w-3 h-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 7h6v6"
              />
              <path
                d="m22 7-8.5 8.5-5-5L2 17"
              />
            </svg>
          </span>
          <span>
            +
            15.5
            %
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="absolute inset-0 bg-gradient-to-br from-white/5 to-transparent pointer-events-none rounded-2xl"
  />
</div>
`;

exports[`Component Snapshots > should match MetricCard snapshot without optional props > metric-card-simple 1`] = `
<div
  aria-label="Metric: Simple Metric"
  class="rounded-2xl border bg-gradient-card dark:bg-gradient-card-dark border-white/20 dark:border-white/10 hover:transform hover:-translate-y-1 hover:scale-[1.02] relative overflow-hidden p-6 focus:outline-none focus:ring-2 focus:ring-primary/20 transition-all duration-300 hover:shadow-lg hover:shadow-blue-500/25"
  initial="rest"
  role="article"
  tabindex="0"
  variants="[object Object]"
  whilehover="hover"
  whiletap="tap"
>
  <div
    class="absolute inset-0 rounded-2xl bg-gradient-to-r from-sky-500/20 via-cyan-400/10 to-fuchsia-500/20 p-[1px]"
  >
    <div
      class="h-full w-full rounded-2xl bg-card/90 backdrop-blur-sm"
    />
  </div>
  <div
    class="relative z-10"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <div
        class="flex items-center gap-3"
      >
        <h3
          class="text-sm font-medium text-muted-foreground"
        >
          Simple Metric
        </h3>
      </div>
    </div>
    <div
      class="flex items-end justify-between"
    >
      <div
        class="flex-1"
      >
        <div
          animate="[object Object]"
          aria-label="Current value: 42"
          class="text-3xl font-bold text-foreground mb-1"
          initial="[object Object]"
          transition="[object Object]"
        >
          42
        </div>
      </div>
    </div>
  </div>
  <div
    class="absolute inset-0 bg-gradient-to-br from-white/5 to-transparent pointer-events-none rounded-2xl"
  />
</div>
`;

exports[`Component Snapshots > should match StatusBadge snapshot for different statuses > status-badge-completed 1`] = `
<div
  animate="animate"
  aria-label="Status: Completed"
  aria-live="off"
  class="inline-flex items-center font-medium rounded-full border relative px-3 py-1.5 text-sm gap-1.5 text-emerald-600 bg-emerald-500/10 border-emerald-500/20 shadow-lg shadow-emerald-500/25"
  initial="initial"
  role="status"
  variants="[object Object]"
  whilehover="[object Object]"
>
  <div
    aria-hidden="true"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-check-big w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21.801 10A10 10 0 1 1 17 3.335"
      />
      <path
        d="m9 11 3 3L22 4"
      />
    </svg>
  </div>
  <span>
    Completed
  </span>
</div>
`;

exports[`Component Snapshots > should match StatusBadge snapshot for different statuses > status-badge-failed 1`] = `
<div
  animate="animate"
  aria-label="Status: Failed"
  aria-live="off"
  class="inline-flex items-center font-medium rounded-full border relative px-3 py-1.5 text-sm gap-1.5 text-rose-600 bg-rose-500/10 border-rose-500/20 shadow-lg shadow-rose-500/25"
  initial="initial"
  role="status"
  variants="[object Object]"
  whilehover="[object Object]"
>
  <div
    aria-hidden="true"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-x w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="m15 9-6 6"
      />
      <path
        d="m9 9 6 6"
      />
    </svg>
  </div>
  <span>
    Failed
  </span>
</div>
`;

exports[`Component Snapshots > should match StatusBadge snapshot for different statuses > status-badge-pending 1`] = `
<div
  animate="animate"
  aria-label="Status: Pending"
  aria-live="off"
  class="inline-flex items-center font-medium rounded-full border relative px-3 py-1.5 text-sm gap-1.5 text-amber-600 bg-amber-500/10 border-amber-500/20 shadow-lg shadow-amber-500/25"
  initial="initial"
  role="status"
  variants="[object Object]"
  whilehover="[object Object]"
>
  <div
    aria-hidden="true"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-clock w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 6v6l4 2"
      />
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
  </div>
  <span>
    Pending
  </span>
</div>
`;

exports[`Component Snapshots > should match StatusBadge snapshot for different statuses > status-badge-processing 1`] = `
<div
  animate="animate"
  aria-label="Status: Processing"
  aria-live="polite"
  class="inline-flex items-center font-medium rounded-full border relative px-3 py-1.5 text-sm gap-1.5 text-blue-600 bg-blue-500/10 border-blue-500/20 shadow-lg shadow-blue-500/25"
  initial="initial"
  role="status"
  variants="[object Object]"
  whilehover="[object Object]"
>
  <div
    animate="[object Object]"
    aria-hidden="true"
    transition="[object Object]"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-loader-circle w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 12a9 9 0 1 1-6.219-8.56"
      />
    </svg>
  </div>
  <span>
    Processing
  </span>
  <div
    animate="[object Object]"
    class="
            absolute inset-0 rounded-full
            border-blue-500/20 // Extract background color
            opacity-20
          "
    transition="[object Object]"
  />
</div>
`;

exports[`Component Snapshots > should match StatusBadge snapshot with different sizes > status-badge-size-lg 1`] = `
<div
  animate="animate"
  aria-label="Status: Active"
  aria-live="polite"
  class="inline-flex items-center font-medium rounded-full border relative px-4 py-2 text-base gap-2 text-purple-600 bg-purple-500/10 border-purple-500/20 shadow-lg shadow-purple-500/25"
  initial="initial"
  role="status"
  variants="[object Object]"
  whilehover="[object Object]"
>
  <div
    animate="[object Object]"
    aria-hidden="true"
    transition="[object Object]"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-play w-5 h-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
      />
    </svg>
  </div>
  <span>
    Active
  </span>
  <div
    animate="[object Object]"
    class="
            absolute inset-0 rounded-full
            border-purple-500/20 // Extract background color
            opacity-20
          "
    transition="[object Object]"
  />
</div>
`;

exports[`Component Snapshots > should match StatusBadge snapshot with different sizes > status-badge-size-md 1`] = `
<div
  animate="animate"
  aria-label="Status: Active"
  aria-live="polite"
  class="inline-flex items-center font-medium rounded-full border relative px-3 py-1.5 text-sm gap-1.5 text-purple-600 bg-purple-500/10 border-purple-500/20 shadow-lg shadow-purple-500/25"
  initial="initial"
  role="status"
  variants="[object Object]"
  whilehover="[object Object]"
>
  <div
    animate="[object Object]"
    aria-hidden="true"
    transition="[object Object]"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-play w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
      />
    </svg>
  </div>
  <span>
    Active
  </span>
  <div
    animate="[object Object]"
    class="
            absolute inset-0 rounded-full
            border-purple-500/20 // Extract background color
            opacity-20
          "
    transition="[object Object]"
  />
</div>
`;

exports[`Component Snapshots > should match StatusBadge snapshot with different sizes > status-badge-size-sm 1`] = `
<div
  animate="animate"
  aria-label="Status: Active"
  aria-live="polite"
  class="inline-flex items-center font-medium rounded-full border relative px-2 py-1 text-xs gap-1 text-purple-600 bg-purple-500/10 border-purple-500/20 shadow-lg shadow-purple-500/25"
  initial="initial"
  role="status"
  variants="[object Object]"
  whilehover="[object Object]"
>
  <div
    animate="[object Object]"
    aria-hidden="true"
    transition="[object Object]"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-play w-3 h-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
      />
    </svg>
  </div>
  <span>
    Active
  </span>
  <div
    animate="[object Object]"
    class="
            absolute inset-0 rounded-full
            border-purple-500/20 // Extract background color
            opacity-20
          "
    transition="[object Object]"
  />
</div>
`;
